# Competency-Hybrid-Search-Engine

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
docs/: ADD_MAPPER.md  README.md  RELATED_WORK.md  SEARCH_FILTERS.md  SEARCH_SCORES.md  SPECIFICATIONS.md
examples/data/esco/en/: cleaned_occupations.json  cleaned_skills.json
examples/data/esco/fr/: ISCOGroups_fr.csv  cleaned_occupations.json  cleaned_skills.json  digCompSkillsCollection_fr.csv  digitalSkillsCollection_fr.csv  greenSkillsCollection_fr.csv  languageSkillsCollection_fr.csv  occupations_fr.csv  researchOccupationsCollection_fr.csv  researchSkillsCollection_fr.csv  transversalSkillsCollection_fr.csv
examples/data/forma/: FCod.csv  cleaned.json
examples/data/forma14/: Descripteur_Formacode_des_Champs_Semantiques_20241212.xls  cleaned.json
examples/data/rome/: cleaned.json  cr_gd_dp_appellations.csv
examples/scripts/: Transform-Esco-Occupations.ipynb  Transform-Esco-Skills.ipynb  Transform-Forma.ipynb  Transform-Forma14.ipynb  Transform-Rome.ipynb
src/data_importer/: __init__.py  config.py  dependencies.py  enums.py  main.py  schemas.py
src/data_importer/indexing_strategies/: __init__.py  contract.py  field_combination.py  field_duplication.py  schemas.py
src/data_importer/mappers/: __init__.py  contract.py  esco.py  forma.py  forma14.py  rome.py
src/search_engine/adapters/: exceptions.py
src/search_engine/adapters/api/: dependencies.py  exception_handler.py  main.py  mapper.py
src/search_engine/adapters/encoding/: huggingface_dense.py  huggingface_sparse.py
src/search_engine/domain/: exceptions.py
src/search_engine/domain/contracts/: db_client.py  embedding_service.py  repository.py  sparse_embedding_service.py
src/search_engine/domain/services/: entity_service.py
src/search_engine/domain/types/: competency.py  entity.py  enums.py  filters.py  identifier.py  search_type.py  service_models.py  vectors.py
tests/: __init__.py  conftest.py
tests/test_adapters/test_api/: dependencies_test.py  exception_handler_test.py  main_test.py  mapper_test.py
tests/test_adapters/test_api/test_entity/: entity_router_test.py  entity_schemas_test.py
tests/test_adapters/test_api/test_search/: search_router_test.py  search_schemas_test.py
tests/test_adapters/test_encoding/: __init__.py  huggingface_dense_test.py  huggingface_sparse_test.py
tests/test_adapters/test_infrastructure/: __init__.py
tests/test_domain/: domain_exceptions_test.py
tests/test_domain/test_contracts/: db_client_test.py  embedding_service_test.py  repository_contract_test.py  sparse_embedding_service_test.py
tests/test_domain/test_services/: entity_service_test.py
tests/test_domain/test_types/: entity_test.py  search_type_test.py  service_models_test.py  uuid_type_test.py  vectors_test.py
(+14 files in other folders)
