[project]
name = "search_engine"
version = "1.0.0"
description = "A search engine to allow users to index, manage, and search within skills, with FastAPI and Qdrant."
authors = [
  { name = "Inokufu", email = "contact@inokufu.com" }
]
dependencies = [
    "mkdocs~=1.6.1",
    "mkdocstrings-python~=1.16.6",
    "mkdocs-material~=9.6.9",
    "griffe-inherited-docstrings~=1.1.1",
    "uvicorn[standard]~=0.34.0",
    "gunicorn~=23.0.0",
    "fastapi~=0.116.1",
    "qdrant-client~=1.14.2",
    "logger @ git+https://github.com/inokufu/python-logger@v0.1.0",
    "configcore @ git+https://github.com/inokufu/python-config@v0.1.0",
    "sentence-transformers>=5.0.0",
    "python-multipart>=0.0.20",
]
readme = "docs/README.md"
requires-python = ">= 3.13"

[tool.rye]
managed = true
dev-dependencies = [
    "diff-cover~=9.7.1",
    "pre-commit~=4.3.0",
    "pytest~=8.4.2",
    "pytest-cov~=7.0.0",
    "pytest-mock~=3.15.1",
    "pytest-asyncio>=1.0.0",
]

[tool.rye.scripts]
start = "uvicorn adapters.api.main:app --host 0.0.0.0 --port 8005 --reload"
start-data-importer = "uvicorn data_importer.main:app --host 0.0.0.0 --port 8006 --reload"

[tool.ruff]
output-format = "concise"
target-version = "py313"
line-length = 88
indent-width = 4
extend-exclude = ["./examples"]

lint.pydocstyle.convention = "google"
lint.flake8-bandit.check-typed-exception = true
lint.flake8-type-checking.strict = true

lint.select = ["ALL"]
lint.ignore = [
  "PLE1205", # logging-too-many-args
  "D100", # pydocstyle
  "EM", # flake8-errmsg
  "INP001", # implicit-namespace-package
  "TRY003", # raise-vanilla-args
  "TRY401", # verbose-log-message
  "SLF001", # private-member-access
  "PLR0913", # too-many-arguments
]
lint.extend-unfixable = [
  "TC002", # typing-only-third-party-import
  "TRY400", # error-instead-of-exception
  "SIM105", # suppressible-exception
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101", # Asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.lint.isort]
known-first-party = ["adapters", "domain"]

[tool.codespell]
skip = "examples/*"
uri-ignore-words-list = "*"
ignore-words-list = "nin,langage"

[tool.pytest.ini_options]
pythonpath = [".", "src", "src/search_engine", "src/data_importer"]
addopts = "--cov=src/search_engine --cov-report=term --cov-report=xml"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = [
  "@abstractmethod",
  "if TYPE_CHECKING:",
]
include_namespace_packages = true
